--- a/v2/views/show.ejs
+++ b/v2/views/show.ejs
@@ -10,13 +10,15 @@
         <div class="thumbnail">
             <img class="img-responsive" src="<%- campgrounds.image%>">
             <h4><%= campgrounds.name.toUpperCase()%></h4>
-            <h4><%= campgrounds.description.toUpperCase()%></h4>           
             <a href="/campgrounds/<%- campgrounds._id %>/edit" class="btn btn-primary btn-sm">Edit</a>
             <a href="#" class="btn btn-danger btn-sm">Delete</a>
 
         </div>
         
     </div>
+    <% campgrounds.comments.forEach(function(comment){ %>
+        <p><strong><%= comment.author %> </strong>-<%= comment.text %></p>
+    <% }) %>
 
 </div>
     
